# timage

./: .gitignore  config.yaml  hydra.yaml  pyproject.toml  test.py  train_tft.py  train_txr.py
config/: config.yaml  config_cmi.py  solar.yaml
config/datamodule/: solar.yaml
config/dataset/: cmi.yaml  solar.yaml
config/model/: timage.yaml
config/trainer/: default.yaml
outputs/2025-07-07/13-54-47/.hydra/: config.yaml  hydra.yaml
outputs/2025-07-07/13-54-57/.hydra/: hydra.yaml
outputs/2025-07-07/13-56-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-07-07/14-02-57/.hydra/: hydra.yaml
outputs/2025-07-07/14-03-12/.hydra/: config.yaml  hydra.yaml
outputs/lightning_logs/version_0/checkpoints/: epoch=35-step=58860.ckpt
src/timage_forecasting/: datamodule.py  dataset.py  model.py  models.py  sub_modules.py  train.py  train_tide.py
src/timage_forecasting/datamodule/: __init__.py  datamodule.py  forecasting.py
src/timage_forecasting/model/: base.py  model.py  timexer.py
src/timage_forecasting/train/: train.py  train_tide.py
tests/: test_dataset.py
